# NAMku

./: .gitignore  CMakeLists.txt  NOTICE  README.md  build-from-source.sh
bench/: .gitignore  Makefile  nambench.cpp
gui/: README.md  geometry.sh  make_assets.sh
packaging/: make-hpkg.sh  namku-0.1.0.recipe  namku.PackageInfo
resource/fonts/: NOTICE
source/: namcontroller.cpp  namcontroller.h  namfactory.cpp  namgeometry.h  namids.h  namprocessor.cpp  namprocessor.h  namview.cpp  namview.h  resamplingnam.h  version.h
